--- a/Milestone 1 portfolio/Module-3/index.html
+++ b/Milestone 1 portfolio/Module-3/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="styles/color.css">
 </head>
 <body>
+    <div>
     <h1>My web Site</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptates, numquam a qui error dolor, iusto praesentium quia porro sequi consectetur magni fugit dicta cupiditate cum suscipit nemo quidem dolorem?</p>
+    </div>
+    <div>
+        <h1>My second task</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, enim! Architecto eveniet velit adipisci, assumenda quam possimus neque, ducimus optio earum voluptate in ut sunt, exercitationem distinctio impedit quia ipsa.
+        </p>
+    </div>
+    <div>
+        <h1>My Third task</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, enim! Architecto eveniet velit adipisci, assumenda quam possimus neque, ducimus optio earum voluptate in ut sunt, exercitationem distinctio impedit quia ipsa.
+        </p>
+    </div>
+    <div>
+        <h1>My Fourth task</h1>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam, enim! Architecto eveniet velit adipisci, assumenda quam possimus neque, ducimus optio earum voluptate in ut sunt, exercitationem distinctio impedit quia ipsa.
+        </p>
+    </div>
+
 </body>
 </html>
