navigation work, simple hover

--- a/Milestone 1 portfolio/Module-4/audio-video.html
+++ b/Milestone 1 portfolio/Module-4/audio-video.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Video</title>
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+        <header>
+        <nav>
+            <ul>
+                <li><a href="form.html">FORM</a></li>
+                <li><a href="C:\Projects\web-dev\Milestone 1 portfolio\practice\audio-video.htmlv">Audio-VIDEO</a></li>
+                <li><a href="index.html">INDEX</a></li>
+                <li><a href="navitable.html">Navigation</a></li>
+            
+            </ul>
+        </nav>
+    </header>
     <h2>Audio and Video section:</h2>
     <audio controls src="media/bird.mp3.wav">Bird, nature and river sound</audio>
     <video controls width="200" src="media/naturevideo.mp4.mp4">Nature video</video>
