--- a/Milestone 1 portfolio/Module-4/index.html
+++ b/Milestone 1 portfolio/Module-4/index.html
@@ -11,9 +11,11 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>Blogs</li>
-                <li>About</li>
+                <li><a href="form.html">FORM</a></li>
+                <li><a href="audio-video.html">Audio-VIDEO</a></li>
+                <li><a href="index.html">INDEX</a></li>
+                <li><a href="navitable.html">Navigation</a></li>
+            
             </ul>
         </nav>
     </header>
