--- a/Milestone 1 portfolio/Module-4/form.html
+++ b/Milestone 1 portfolio/Module-4/form.html
@@ -5,8 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Registration</title>
     <link rel="stylesheet" href="formstyle.css">
+    <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+        <header>
+        <nav>
+            <ul>
+                <li><a href="form.html">FORM</a></li>
+                <li><a href="audio-video.html">Audio-VIDEO</a></li>
+                <li><a href="index.html">INDEX</a></li>
+                <li><a href="navitable.html">Navigation</a></li>
+            
+            </ul>
+        </nav>
+    </header>
     <header>
 
     </header>
