--- a/Milestone 2 Responsive website layout/Module 7/flex box.html
+++ b/Milestone 2 Responsive website layout/Module 7/flex box.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
+    <style>
+        .container{
+            border: solid rebeccapurple;
+            height: 200px;
+            width: 450px;
+            display: flex;
+            justify-content: center;/* horizontally align the content */
+            align-items: center; /* vertically align the content */
+            flex-direction: column;
+            flex-direction: column-reverse;
+        }
+        .box{
+            border: dotted goldenrod;
+            width: 50px;
+            height: 30px;
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Flex Box website Layout Learning day</h2>
+    <div class="container">
+        <div class="box">Box-1</div>
+        <div class="box">Box-2</div>
+        <div class="box">Box-3</div>
+        <div class="box">Box-4</div>
+        <div class="box">Box-5</div>
+        <div class="box">Box-6</div>
+        <div class="box">Box-7</div>
+    </div>
 </body>
 </html>
