--- a/Milestone 2 Responsive website layout/simple food cart.html
+++ b/Milestone 2 Responsive website layout/simple food cart.html
@@ -4,8 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food cart</title>
+    <style>
+        .container{
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+        }
+        .food{
+            border: 1px solid brown;
+            border-radius: 10px ;
+            padding: 10px;
+        }
+        .food img{
+            width: 100%;
+        }
+        @media screen and (max-width: 576px) {
+            .container{
+                grid-template-columns: repeat(1, 1fr);
+            }
+            
+        }
+    </style>
 </head>
 <body>
-    
+    <h2>Healthy Food</h2>
+    <div class="container">
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 1</h3>
+            <p>Price: $100</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis distinctio voluptate ea qui aut sit aliquid fuga, excepturi possimus quod.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 2</h3>
+            <p>Price: $200</p>
+            <p>Fuga id rerum asperiores odit maiores voluptates voluptatibus reiciendis. Expedita minus eligendi consequuntur quam ad dolore minima quae eaque modi.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 3</h3>
+            <p>Price: $300</p>
+            <p>Doloremque tenetur reiciendis assumenda culpa nam minus, praesentium natus tempore cumque repellendus odio impedit quam at quo quas ad voluptas!</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 4</h3>
+            <p>Price: $400</p>
+            <p>Quibusdam laudantium voluptatem aliquid commodi, quo assumenda reprehenderit! Sint fugit praesentium velit temporibus? Distinctio eligendi, nam velit dolorum vel illo?</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 5</h3>
+            <p>Price: $500</p>
+            <p>Molestias accusantium aliquam architecto voluptates laborum atque pariatur laboriosam a porro sit dolorem necessitatibus voluptatum, eaque incidunt ducimus harum minima.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 6</h3>
+            <p>Price: $600</p>
+            <p>Iste nesciunt, libero obcaecati, et labore ratione aperiam delectus corrupti, animi amet quas fugit nulla ullam sapiente! Iusto, numquam sapiente.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 7</h3>
+            <p>Price: $700</p>
+            <p>Amet sequi ducimus non voluptates ratione dignissimos at dicta quos, necessitatibus illum, aspernatur laboriosam eum provident voluptatibus accusantium quaerat alias.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 8</h3>
+            <p>Price: $800</p>
+            <p>Maxime laboriosam aperiam quisquam odit error, obcaecati quidem sit deleniti, aspernatur omnis, cum molestias debitis libero cumque perspiciatis sapiente possimus!</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 9</h3>
+            <p>Price: $900</p>
+            <p>Porro asperiores doloremque molestias nobis laborum odio laboriosam iusto voluptate illo, perferendis hic dolorum corporis laudantium maxime praesentium earum vero?</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 10</h3>
+            <p>Price: $1000</p>
+            <p>Molestias similique vel, dicta officiis atque voluptates ut! Voluptate ad rem enim vero dolorem pariatur iusto debitis consequuntur voluptas fugiat.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 11</h3>
+            <p>Price: $1100</p>
+            <p>At ullam architecto nobis eligendi! Totam blanditiis voluptatum pariatur magni aspernatur numquam minima dignissimos, quis praesentium, eos ut mollitia quisquam.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 12</h3>
+            <p>Price: $1200</p>
+            <p>Quo placeat vel est vero debitis sint, recusandae commodi voluptatem nam consequuntur ullam! Officia in error, eveniet obcaecati placeat est?</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 13</h3>
+            <p>Price: $1300</p>
+            <p>Dignissimos fugit voluptatum quisquam facere ab, nostrum, est commodi nam ipsa dicta, perspiciatis officia reprehenderit magni tempore excepturi deserunt dolores.</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 14</h3>
+            <p>Price: $1400</p>
+            <p>Tenetur atque error, magnam sed hic consequatur nemo, non maiores labore porro, ratione suscipit quos nihil omnis delectus dicta et!</p>
+        </div>
+        <div class="food">
+            <img src="Module 7/Media/hfood.avif" alt="">
+            <h3>Food Item - 15</h3>
+            <p>Price: $1500</p>
+            <p>Mollitia excepturi culpa dolores sed maiores ab in quo, reiciendis iusto eius vitae suscipit libero, quasi quis ullam. Autem, neque!</p>
+        </div>
+    </div>
 </body>
 </html>
