--- a/Milestone 2 Responsive website layout/simple food cart.html
+++ b/Milestone 2 Responsive website layout/simple food cart.html
@@ -22,6 +22,12 @@
             .container{
                 grid-template-columns: repeat(1, 1fr);
             }
+        }
+        /* medium device */
+        @media screen and (min-width:577px) and (max-width: 922px) {
+            .container{
+                grid-template-columns: repeat(2, 1fr);
+            }
             
         }
     </style>
