collage images perfectly but didn't make it responsive

--- a/Milestone 2 Responsive website layout/Module 8/picture collage.html
+++ b/Milestone 2 Responsive website layout/Module 8/picture collage.html
@@ -10,5 +10,35 @@
     <header>
         <h1>MY COLLAGE PICTURE</h1>
     </header>
+    <main>
+        <section>
+            <div class="row">
+            <img src="Media/A.jpg" alt="">
+            </div>
+
+        <div class="row">
+            <div><img src="Media/B.jpg" alt=""></div>
+            <div><img src="Media/C.jpg" alt=""></div>
+            <div class="double-collage">
+                <img src="Media/D.jpg" alt="">
+                <img src="Media/E.jpg" alt="">
+            </div>
+        </div>
+        <div class="row">
+            <div>
+                <img src="Media/F.jpg" alt="">
+            </div>
+            <div class="square-collage">
+                <img src="Media/G.jpg" alt="">
+                <img src="Media/G.jpg" alt="">
+                <img src="Media/G.jpg" alt="">
+                <img src="Media/G.jpg" alt="">
+            </div>
+            <div>
+                <img src="Media/H.jpg" alt="">
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
